fix(benchmarking): resolve metrics generation and processing issues
- Integrate metrics processing directly into BenchmarkRunner
  - Add processMetrics() method to download and export metrics after benchmarks complete
  - Remove dependency on Maven execution for metrics processing

- Fix compilation warnings
  - Replace deprecated thread.getId() with thread.threadId() in HttpClientFactory
  - Fix unchecked type warning in SimpleMetricsExporter using TypeToken

- Consolidate redundant metrics classes
  - Remove FinalMetricsProcessor (replaced with QuarkusMetricsFetcher + SimpleMetricsExporter)
  - Remove PrometheusMetricsParser (parsing logic exists in QuarkusMetricsFetcher)
  - Remove unused BenchmarkMetrics, JvmMetrics, ApplicationMetrics classes

- Fix benchmark execution issues
  - Reduce token pool size from 5000 to 10 to prevent Keycloak timeout
  - Update SimpleMetricsExporter to recognize "FinalCumulativeMetrics" pattern
  - Update QuarkusMetricsPostProcessor to recognize "finalcumulativemetrics" file pattern

- Clean up Maven configuration
  - Remove download-final-metrics execution from pom.xml
  - Remove deprecated annotations per pre-1.0 requirements

All four metrics files are now generated successfully:
- integration-benchmark-result.json (JMH results)
- http-metrics.json (HTTP performance)
- integration-jwt-validation-metrics.json (JWT validation steps)
- quarkus-metrics.json (CPU & memory usage)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>